--- a/yizu/Home/HomeDetail/view/HomeDetailFooter.xib
+++ b/yizu/Home/HomeDetail/view/HomeDetailFooter.xib
@@ -48,15 +48,13 @@
                         <constraint firstAttribute="height" constant="8" id="IuD-9V-HpE"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8HF-hn-heb">
-                    <rect key="frame" x="18" y="155" width="31" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="收藏"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8HF-hn-heb" customClass="favoriteBtn">
+                    <rect key="frame" x="15" y="155" width="30" height="30"/>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="商家电话" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="buW-6e-ObH">
                     <rect key="frame" x="306.5" y="28" width="53.5" height="16"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="textColor" red="0.087294774764981375" green="0.63259270097317688" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="商家电话" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pyl-RG-kOE">
@@ -85,10 +83,11 @@
                         <constraint firstAttribute="height" constant="1" id="c5r-sz-XIw"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hk4-eL-IAP">
-                    <rect key="frame" x="61" y="155" width="52" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="点赞👍"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hk4-eL-IAP" customClass="CellBtn">
+                    <rect key="frame" x="60" y="155" width="100" height="35"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="Hvj-Uu-ycg"/>
+                    </constraints>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -98,22 +97,28 @@
                 <constraint firstItem="V8a-hH-gBx" firstAttribute="top" secondItem="lxy-Pf-awl" secondAttribute="bottom" constant="10" id="6vd-8z-l7w"/>
                 <constraint firstItem="y0K-t3-r76" firstAttribute="top" secondItem="KQ6-Fe-aEB" secondAttribute="bottom" constant="10" id="7ij-Ci-7Kn"/>
                 <constraint firstItem="hB0-al-So9" firstAttribute="leading" secondItem="7PF-gg-FGo" secondAttribute="leading" id="8I4-M8-sgH"/>
+                <constraint firstItem="hk4-eL-IAP" firstAttribute="leading" secondItem="8HF-hn-heb" secondAttribute="trailing" constant="15" id="9Ad-2l-UZh"/>
                 <constraint firstItem="lxy-Pf-awl" firstAttribute="leading" secondItem="y0K-t3-r76" secondAttribute="leading" id="C5l-N8-szX"/>
                 <constraint firstItem="hB0-al-So9" firstAttribute="trailing" secondItem="7PF-gg-FGo" secondAttribute="trailing" id="CGK-ce-ow1"/>
                 <constraint firstItem="mBx-de-ofO" firstAttribute="top" secondItem="hB0-al-So9" secondAttribute="bottom" constant="10" id="Fho-Py-p6u"/>
+                <constraint firstItem="8HF-hn-heb" firstAttribute="leading" secondItem="7PF-gg-FGo" secondAttribute="leading" constant="15" id="IVr-xq-EFQ"/>
                 <constraint firstItem="sz1-bN-bso" firstAttribute="top" secondItem="y0K-t3-r76" secondAttribute="bottom" constant="10" id="N25-et-XMM"/>
                 <constraint firstItem="Pyl-RG-kOE" firstAttribute="leading" secondItem="buW-6e-ObH" secondAttribute="leading" id="PAl-Vo-lhb"/>
                 <constraint firstItem="y0K-t3-r76" firstAttribute="leading" secondItem="mBx-de-ofO" secondAttribute="leading" id="PFg-Mm-FtT"/>
                 <constraint firstItem="sz1-bN-bso" firstAttribute="leading" secondItem="7PF-gg-FGo" secondAttribute="leading" id="Q7E-6a-HDe"/>
+                <constraint firstItem="hk4-eL-IAP" firstAttribute="top" secondItem="8HF-hn-heb" secondAttribute="top" id="Tij-vZ-lEC"/>
                 <constraint firstItem="Pyl-RG-kOE" firstAttribute="top" secondItem="y0K-t3-r76" secondAttribute="top" id="UGg-to-gmC"/>
                 <constraint firstItem="V8a-hH-gBx" firstAttribute="trailing" secondItem="7PF-gg-FGo" secondAttribute="trailing" id="WRN-yY-6se"/>
                 <constraint firstItem="mBx-de-ofO" firstAttribute="leading" secondItem="7PF-gg-FGo" secondAttribute="leading" constant="10" id="Xyx-ZF-h35"/>
                 <constraint firstItem="KQ6-Fe-aEB" firstAttribute="trailing" secondItem="7PF-gg-FGo" secondAttribute="trailing" id="YnD-bR-auC"/>
+                <constraint firstItem="8HF-hn-heb" firstAttribute="top" secondItem="V8a-hH-gBx" secondAttribute="bottom" constant="13" id="ZeT-of-OT0"/>
                 <constraint firstItem="7PF-gg-FGo" firstAttribute="trailing" secondItem="buW-6e-ObH" secondAttribute="trailing" constant="15" id="act-IH-ACd"/>
                 <constraint firstItem="V8a-hH-gBx" firstAttribute="leading" secondItem="7PF-gg-FGo" secondAttribute="leading" id="bYc-56-GiV"/>
+                <constraint firstItem="7PF-gg-FGo" firstAttribute="bottom" secondItem="hk4-eL-IAP" secondAttribute="bottom" constant="10" id="bmt-O9-CDP"/>
                 <constraint firstItem="7PF-gg-FGo" firstAttribute="trailing" secondItem="Pyl-RG-kOE" secondAttribute="trailing" constant="15" id="gcc-H1-YNl"/>
                 <constraint firstItem="lxy-Pf-awl" firstAttribute="top" secondItem="sz1-bN-bso" secondAttribute="bottom" constant="10" id="gf7-na-KAq"/>
                 <constraint firstItem="Ux2-qH-gc5" firstAttribute="trailing" secondItem="Pyl-RG-kOE" secondAttribute="trailing" id="lXy-PD-xdO"/>
+                <constraint firstItem="7PF-gg-FGo" firstAttribute="bottom" secondItem="8HF-hn-heb" secondAttribute="bottom" constant="15" id="ls7-nH-8u1"/>
                 <constraint firstItem="hB0-al-So9" firstAttribute="top" secondItem="7PF-gg-FGo" secondAttribute="top" id="qD8-2s-Yza"/>
                 <constraint firstItem="Ux2-qH-gc5" firstAttribute="top" secondItem="lxy-Pf-awl" secondAttribute="top" id="qaF-NG-ioN"/>
                 <constraint firstItem="KQ6-Fe-aEB" firstAttribute="leading" secondItem="7PF-gg-FGo" secondAttribute="leading" id="r1p-9k-nWo"/>
@@ -123,11 +128,13 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="7PF-gg-FGo"/>
             <connections>
+                <outlet property="favBtn" destination="8HF-hn-heb" id="brB-dl-ITo"/>
                 <outlet property="fullLab" destination="Pyl-RG-kOE" id="Lue-kT-Caz"/>
+                <outlet property="likeBtn" destination="hk4-eL-IAP" id="9wO-Dz-Cqk"/>
                 <outlet property="phoneLab" destination="buW-6e-ObH" id="kqZ-qc-Qnt"/>
                 <outlet property="timeLab" destination="Ux2-qH-gc5" id="xPY-n9-KHT"/>
             </connections>
-            <point key="canvasLocation" x="-148" y="-70"/>
+            <point key="canvasLocation" x="-437" y="-51"/>
         </view>
     </objects>
 </document>
