--- a/yizu/ActivityPage/ActivityList/view/Activity.storyboard
+++ b/yizu/ActivityPage/ActivityList/view/Activity.storyboard
@@ -53,13 +53,13 @@
                                             <rect key="frame" x="10" y="31" width="355" height="178.5"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EPx-jh-i5g">
-                                            <rect key="frame" x="16" y="190" width="33" height="14.5"/>
+                                            <rect key="frame" x="13" y="190" width="33" height="14.5"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pej-r8-28b">
-                                            <rect key="frame" x="30" y="169.5" width="30.5" height="13.5"/>
+                                            <rect key="frame" x="23" y="169.5" width="30.5" height="13.5"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
@@ -68,8 +68,8 @@
                                     <constraints>
                                         <constraint firstItem="P4d-eG-dEY" firstAttribute="top" secondItem="EPx-jh-i5g" secondAttribute="bottom" constant="10" id="3hR-IO-CwV"/>
                                         <constraint firstAttribute="bottom" secondItem="P4d-eG-dEY" secondAttribute="bottom" constant="5" id="8OJ-wA-fcm"/>
-                                        <constraint firstItem="EPx-jh-i5g" firstAttribute="leading" secondItem="oO5-jr-M4h" secondAttribute="leadingMargin" constant="8" id="9hn-QI-IzF"/>
-                                        <constraint firstItem="pej-r8-28b" firstAttribute="leading" secondItem="oO5-jr-M4h" secondAttribute="leadingMargin" constant="22" id="I3H-8A-RoB"/>
+                                        <constraint firstItem="EPx-jh-i5g" firstAttribute="leading" secondItem="oO5-jr-M4h" secondAttribute="leadingMargin" constant="5" id="9hn-QI-IzF"/>
+                                        <constraint firstItem="pej-r8-28b" firstAttribute="leading" secondItem="oO5-jr-M4h" secondAttribute="leadingMargin" constant="15" id="I3H-8A-RoB"/>
                                         <constraint firstItem="DG1-0L-P5u" firstAttribute="top" secondItem="oO5-jr-M4h" secondAttribute="top" constant="8" id="Jue-LB-CRA"/>
                                         <constraint firstItem="P4d-eG-dEY" firstAttribute="top" secondItem="P0c-UO-le0" secondAttribute="bottom" constant="5" id="LQq-BN-s6k"/>
                                         <constraint firstItem="EPx-jh-i5g" firstAttribute="top" secondItem="pej-r8-28b" secondAttribute="bottom" constant="7" id="aPR-y9-j5I"/>
@@ -99,7 +99,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XUK-03-cRp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1319" y="-519"/>
+            <point key="canvasLocation" x="-1319.2" y="-519.49025487256381"/>
         </scene>
         <!--First Scroll View Controller-->
         <scene sceneID="HjA-Fw-YbV">
